<resources>
    <string name="app_name">Tripawy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="sync">Sync</string>
    <string name="logout">Logout</string>
    <string name="upcoming">Upcoming Trips</string>
    <string name="history">History</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="log_in">log in</string>
    <string name="sign_up">sign up</string>
    <string name="back">back</string>
    <string name="confirm_password">confirm password</string>
    <string name="home">Home</string>
    <string name="sign_in">sign in</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="to1">To</string>
    <string name="from1">From</string>
    <string name="destination">Destination</string>
    <string name="trip_name">Trip name</string>
    <string name="time">Time</string>
    <string name="add_a_note">Add a note</string>
    <string name="cancel">cancel</string>
    <string name="add_trip">add trip</string>
    <string name="TripName"> Trip Name</string>
    <string name="StartPoint">StartPoint</string>
    <string name="Search">Search</string>
    <string name="Endpoint">End Point</string>
    <string name="details">Start Details</string>
    <string name="AddTrip">Add Trip</string>
    <string name="name">Name</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="default_web_client">205770982992-rkk75afidfuqjff2h80o2r50221uop75.apps.googleusercontent.com</string>
    <string name="cancle_trip">Cancle Trip</string>
    <string name="notes">Notes</string>
    <string name="Login">Login to your account</string>
    <string name="Create">Create an account</string>
    <string name="e_mail">E-mail</string>
    <string name="signinwith">"- Or sign in with "</string>
    <string name="haveAccount">Don\'t have an account ?</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="add_notes">Add notes</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="addNotes">Add Notes</string>
    <string name="No">No UpComing Trips</string>
    <string name="Edit_trip">Edit Trip</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="your_notes">Your Notes</string>
    <string name="uodate">Uodate</string>

    <string name="cancle">cancle</string>
    <string name="update">Update</string>

    <string-array name="Repeat">
        <item>No Repeat</item>
        <item>Repeat Daily </item>
        <item>Repeat Weekly </item>
        <item>Repeat Monthly </item>
    </string-array>
    <string-array name="OnWay">
        <item>One Way Trip</item>
        <item>Round Trip </item>
    </string-array>
</resources>